# cpp_opencv_test

./: CMakeLists.txt  README.md
include/opencv2/: cvconfig.h
src/: CMakeLists.txt  DetectI.cpp  interface.h  main.cpp
